@@ -1,6 +1,7 @@
 v9.0.0 (2022-??-??)
 -------------------
 [change] Upgrade tedious to v15 ([#1417](https://github.com/tediousjs/node-mssql/pull/1417))
+[removed] Removed NodeJS 10 & 12 support ([#1417](https://github.com/tediousjs/node-mssql/pull/1417))
 
 v8.1.3 (2022-08-08)
 -------------------
